<resources>
    <string name="app_name">Lovfresh</string>
    <string name="facebook_app_id">889814314959707</string>
    <string name="default_notification_channel_id">com_lovfreshuser_my_channel_01</string>
    <string name="fb_login_protocol_scheme">fb800265214234885</string>
    <string name="twitter_consumer_key">oKvt4a0l9r6VdfA1ZKAeECS1M</string>
    <string name="twitter_consumer_secret">iPuKmpUlKkQbYF354Io38f7mO7Mdb7Nu1P9f96x6MjG8W2HOeq</string>
    <string name="first_slide_title">Welcome to Lovfresh</string>
    <string name="first_slide_second_title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="second_slide_title">Get extra first services</string>
    <string name="third_slide_title">It is a long established fact</string>
    <string name="start">Start</string>
    <string name="sms_text">SMS (Text message)</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="connect">CONNECT</string>
    <string name="download">DOWNLOAD</string>
    <string name="signup3">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="twitter">Twitter</string>
    <string name="signup">Don’t Have one?</string>
    <string name="sing_up">Create New Account</string>
    <string name="create">Create</string>
    <string name="name">Fullname</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="loyal_no">Loyal 2 Numbar</string>
    <string name="confirm">Confirm Password</string>
    <string name="term_and_condition">I accept all the terms &amp; conditions</string>
    <string name="furit_app">Fruit Shop</string>
    <string name="your_phone_no">Your Phone Number is Verified</string>
    <string name="far_from_vendor_shop">Sorry the shop doesn\'t deliver to your location. Please call the store for more details.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="search">Search Nearby Shop</string>
    <string name="search_shop">Search Shop...</string>
    <string name="search_p">Search Product</string>
    <string name="select_near_by_shop">Select Nearby Shop</string>
    <string name="my_profile">My Profile</string>
    <string name="singup2">SignUp</string>
    <string name="help_and_support">Help and Support</string>
    <string name="training">Training</string>
    <string name="setting">Settings</string>
    <string name="refer_friend">Refer a Friend</string>
    <string name="change_store">Change Shop</string>
    <string name="my_address">My Address</string>
    <string name="order_history">Order History</string>
    <string name="store_info">Shop information</string>
    <string name="logout">Logout</string>
    <string name="pickup_form_store">Pickup from store</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="search_home">Search</string>
    <string name="home">Home</string>
    <string name="nav_tag">Specials</string>
    <string name="my_cart">My Cart</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_register_email">This email is not registered with us</string>
    <string name="error_invalid_mobile">This mobile number is invalid</string>
    <string name="error_password_mismatch">password mismatch!</string>
    <string name="error_invalid_pass">Password must contain at least eight characters,numbers,including uppercase, lowercase letters and Special symbol.</string>
    <string name="no_internet_connection">Please check your internet connection!</string>
    <string name="check_terms_condition">Please check terms and condition</string>
    <string name="input_your_current_otp">Input your current OTP</string>
    <string name="one_time_pass">One Time Password (OTP)</string>
    <string name="submit">Submit</string>
    <string name="already_account">Already have an Account? Login</string>
    <string name="email_id">Email Id</string>
    <string name="enter_the_e">Enter the Email Address Associated with your account.</string>
    <string name="reset_new_password">Reset Your Password</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_pass">New Password</string>
    <string name="not_receivedcode">If you didn\'t receive a Code?</string>
    <string name="otp_error_msg">Please enter otp</string>
    <string name="resend">Resend?</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_with_mobile">Login with Mobile</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="loginwithemail">Login with Email</string>
    <string name="loginwithmobile">Login with Mobile</string>
    <string name="logout_alert_msg">Are you sure you want to logout?</string>
    <string name="description">Description</string>
    <string name="description_detail">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English.</string>
    <string name="custom">Quantity</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="product_detail">Product Detail</string>
    <string name="total">Total</string>
    <string name="Order_total">Order Total</string>
    <string name="my_order">My Order</string>
    <string name="special_offer">Specials Offer</string>
    <string name="place_order">Place Order</string>
    <string name="order_list">Order List</string>
    <string name="set_pickup_method">Set Pickup Method</string>
    <string name="fullname">FullName</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="state">state</string>
    <string name="zipcode">zipcode</string>
    <string name="make_default_address">Make this my default address</string>
    <string name="add_address">Add New Address</string>
    <string name="continue_">Continue</string>
    <string name="shipping_address">Delivery Address</string>
    <string name="add_shipping_address">Add Shipping Address</string>
    <string name="fruit_tag">Fat Apple Shop</string>
    <string name="fresh_tag">Fresh is Best</string>
    <string name="see_our_specials">See our specials</string>
    <string name="set_delivery_time">Set Delivery time:</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="delivery_to">Delivery to:</string>
    <string name="phone_2">Phone:</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="language">Language</string>
    <string name="update_profile">Update Profile</string>
    <string name="setting_enable_permission">Go to settings and enable permissions</string>
    <string name="camera_permission_req">Camera Permission required for this action</string>
    <string name="server_error">Server error</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_rationale">Enable the location</string>
    <string name="specials_for_the_day">Specials for the day</string>
    <string name="specials_for_the_week">Specials for the week</string>
    <string name="no_product_found">Product Not Found</string>
    <string name="specials">Special</string>
    <string name="schedule">Schedule</string>
    <string name="price_range">Price range:</string>
    <string name="sort_by">Sort by:</string>
    <string name="filter_by_category">Filter by Category:</string>
    <string name="popularity">Popularity</string>
    <string name="all_category">All Category</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="select_state">Select Category</string>
    <string name="select_quantity">Please Add Quantity</string>
    <string name="select_unit">Select Unit</string>
    <string name="update_cart">Update Cart</string>
    <string name="delete_alert_msg">Are you sure you want to delete this item?</string>
    <string name="confirm_delete">Confirm</string>
    <string name="ho_ho">Ho ho!</string>
    <string name="add_item">Add Item</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="clear_cart_and_add">Add New</string>
    <string name="out_of_stock">Only limited quantity available. Please select a lesser quantity.</string>
    <string name="address_is_empty">Address is empty</string>
    <string name="card_no">Enter Your Loyal2 Rewards Card Number:</string>
    <string name="shop_note">Add Notes to Shop Owner:</string>
    <string name="payment">Payment:</string>
    <string name="card_detail">Card Details:</string>
    <string name="search_by_zipcode">Search By Zipcode</string>
    <string name="order_placed_msg">Your order has been successfully placed and it is waiting for store confirmation. You can check the status update on orders under Account\'stab</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_card">Select Card</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_title">You have successfully\ncompleted your payment procedure</string>
    <string name="buy">Buy</string>
    <string name="subtotal">SubTotal(3 items)</string>
    <string name="shipping">Shipping and Handling</string>
    <string name="cart_total_amt">Cart Total Amount</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_order">Checkout Order</string>
    <string name="order_id">Order ID</string>
    <string name="deliverd_at">Order date</string>
    <string name="status">Status</string>
    <string name="pickup_delivery">Pickup/Delivery</string>
    <string name="pickup_or_delivery">Pickup Or Delivery</string>
    <string name="Order_Status">Order status</string>
    <string name="detail">Detail</string>
    <string name="account">Account</string>
    <string name="shop_online">Shop Online  </string>
    <string name="first_nm">First Name</string>
    <string name="last_nm">Last Name</string>
    <string name="save">Save</string>
    <string name="term_condi_title">Terms &amp; Conditions</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="address_type">Address Type</string>
    <string name="phone_number">Phone number</string>
    <string name="zip_code">ZIP Code</string>
    <string name="state_province_region">State / Province / Region</string>
    <string name="_3rd_floor_suite_name">3rd Floor, Suite name</string>
    <string name="_2442_columbia_boulevard">2442 Columbia Boulevard</string>
    <string name="full_name_first_and_last_name">Full Name (First and Last name)</string>
    <string name="default_county_code">+61</string>
    <string name="receive_info_string">Yes! I would like to receive updates from LovFresh about promotion, special offers, news and seasonal events. \n *Please tick your preferred method of receiving information :</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>