<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:title="Home" />
    <item
        android:id="@+id/speacials"
        android:icon="@drawable/ic_tags"
        android:menuCategory="secondary"
        android:orderInCategory="1"
        android:title="@string/nav_tag" />


    <item
        android:id="@+id/notification_fragment"
        android:icon="@drawable/ic_cart"
        android:iconTint="@color/black"
        android:menuCategory="secondary"
        android:orderInCategory="2"
        android:text="@string/shop_online"
        android:title="@string/shop_online" />
    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/ic_profile"
        android:menuCategory="secondary"
        android:orderInCategory="3"
        android:title="@string/account" />


</menu>