<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/cm"
        layout="@layout/toolbar_bar_menu" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cm"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tool_bar"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_first_nm"
                style="@style/editTextstyle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/first_nm"
                android:inputType="text"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_last_nm"
                style="@style/editTextstyle"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/last_nm"
                android:inputType="text"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_email"
                style="@style/editTextstyle"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:id="@+id/rv_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_box_with_gray">

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/default_county_code"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    app:ccp_defaultPhoneCode="61"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccp_textSize="15sp" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="1dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/ccp"
                    android:background="@color/stroke_color" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_phone"
                    style="@style/editTextstyle"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/view1"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="14" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_address"
                style="@style/editTextstyle"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_box_with_gray"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/address"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_loyal_no"
                style="@style/editTextstyle"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/loyal_no"
                android:inputType="number"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_box_with_gray">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_password"
                    style="@style/editTextstyle"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/show_pass_info"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/show_pass_info"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/show_pass_btn"
                    android:alpha=".5"
                    android:contentDescription="@string/password"
                    android:padding="5dp"
                    android:src="@drawable/ic_outline_info"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/show_pass_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:alpha=".5"
                    android:contentDescription="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_visibility_off_24" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_white_box_with_gray">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_conf_pass"
                    style="@style/editTextstyle"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/show_conf_info"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm"
                    android:inputType="textPassword" />

                <ImageView
                    android:id="@+id/show_conf_info"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/show_pass_conf"
                    android:alpha=".5"
                    android:contentDescription="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_outline_info"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/show_pass_conf"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:alpha=".5"
                    android:contentDescription="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_visibility_off_24" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padd_10"
                android:background="@drawable/bg_wihte_button"
                android:backgroundTint="@color/light_gray"
                android:orientation="vertical"
                android:padding="@dimen/padd_10"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/tv_receive_info"
                    style="@style/testMediumTitleStyle"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/receive_info_string"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/cb_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/cb_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/sms_text"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padd_10"
                android:background="@drawable/bg_wihte_button"
                android:backgroundTint="@color/light_gray"
                android:orientation="horizontal"
                tools:targetApi="lollipop">

                <CheckBox
                    android:id="@+id/cb_term_condi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="I accept the"
                    android:textColor="#8B8B8B"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tv_term_cond"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/term_condi_title"
                    android:textColor="@color/blue"
                    android:textSize="13sp" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_medium"
                    android:text=" &amp; "
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/blue"
                    android:textSize="13sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_signup"
                style="@style/buttonStyle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/create"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/tv_already_account"
                style="@style/testStyle"
                android:layout_marginTop="20dp"
                android:text="@string/already_account"
                android:textColor="@color/colorPrimary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="bottom"
                android:layout_margin="25dp"
                android:contentDescription="@null"
                android:src="@drawable/heart_logo" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
